--- a/views/films.erb
+++ b/views/films.erb
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<body>
+  <head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  </head>
+  <body>
 
-<div class="jumbotron text-center">
-  <h1>Mubi Movie Ranker</h1>
-  <p>Mubi movies, ranked.<h/p>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
+  <div class="jumbotron text-center">
+    <h1>Mubi Movie Ranker</h1>
+    <p>The movies on Mubi, ranked.</p>
   </div>
-</div>
 
-</body>
+  <div class="container">
+    <% @films.each do |film| %>
+      <div class="row">
+        <div class="article">
+          <h3><%= film[:title] %></h3>
+          <p><%= film[:rating] %></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  </body>
 </html>
-
-
-
-<h1>Mubi Films</h1>
-<% @films.each do |film| %>
-  <h3><%= film[:title] %></h3>
-  <p><%= film[:rating] %></p>
-<% end %>
