--- a/views/films.erb
+++ b/views/films.erb
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootstrap Example</title>
+    <title>Mubi Movie Ranker</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
   </head>
+
   <body>
 
-  <div class="jumbotron text-center">
-    <h1>Mubi Movie Ranker</h1>
-    <p>The movies on Mubi, ranked.</p>
-  </div>
+    <div class="container-narrow container-fluid">
 
-  <div class="container">
-    <% @films.each do |film| %>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <div class="article">
-            <h3><%= film[:title] %></h3>
-            <p><%= film[:rating] %></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-          </div>
-        </div>
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">About</a></li>
+        </ul>
+        <h3 class="muted">Mubi Movie Ranker</h3>
       </div>
-    <% end %>
-  </div>
 
+      <hr>
+
+      <h1 class="display-1 text-center title"><u>Mubi Movie Ranker</u></h1>
+      <p class="lead text-center">The movies on Mubi, ranked</p>
+
+      <div class="container">
+        <% @films.each do |film| %>
+          <div class="row">
+            <div class="col-md-5 col-md-offset-2">
+              <div class="article">
+                <h3 class="title"><%= film[:title] %></h3>
+                <p><%= film[:rating] %></p>
+                <p><%= film[:plot] %></p>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <hr>
+      <div class="footer">
+        <p>© Jonathan Senior 2018</p>
+      </div>
+
+    </div>
   </body>
 </html>
