--- a/public/main.css
+++ b/public/main.css
@@ -45,8 +45,12 @@ p {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  margin: 60px 0;
+  margin: 0;
   text-align: center;
+  background-image: url(/images/bed.jpg);
+  background-size: cover;
+  color: #7FDBFF;
+  width: 100%;
 }
 .jumbotron h1 {
   font-size: 72px;
