Add links to each film title

--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,7 @@ body {
 }
 /* Custom title and p font */
 .title {
-  font-family: 'Asap', sans-serif;
+  font-family: 'Lobster', cursive;
 	font-size: 20px;
 	line-height: 20px;
 }
