--- a/views/films.erb
+++ b/views/films.erb
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -24,7 +25,7 @@
       <hr>
 
 
-      <div class="jumbotron">
+      <div class="jumbotron title">
         <h1 class="display-4">Mubi Movie Ranker</h1>
         <br><br><br>
         <p>The movies on Mubi, ranked.</p>
@@ -39,7 +40,7 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <div class="article">
-                <h4 class="title"><%= film[:title] %></h4>
+                <h4 class="title"><a href="https://mubi.com/showing/<%=film[:ascii_dashed_title]%>/watch"><%= film[:title] %></a></h4>
                 <p><%= film[:rating] %></p>
                 <p><%= film[:plot] %></p>
               </div>
