--- a/views/films.erb
+++ b/views/films.erb
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <div class="article">
-                <h4 class="title"><a href="https://mubi.com/showing/<%=film[:ascii_dashed_title]%>/watch"><%= film[:title] %></a></h4>
+                <h4 class="title"><a class="film-title" href="https://mubi.com/showing/<%=film[:ascii_dashed_title]%>/watch"><%= film[:title] %></a></h4>
                 <p><%= film[:rating] %></p>
                 <p><%= film[:plot] %></p>
               </div>
