Add classes to rating and plot elements

--- a/views/main.erb
+++ b/views/main.erb
@@ -41,8 +41,8 @@
             <div class="col-md-6 col-md-offset-3">
               <div class="article">
                 <h4 class="title"><a class="film-title" href="https://mubi.com/showing/<%=film[:ascii_dashed_title]%>/watch"><%= film[:title] %></a></h4>
-                <p><%= film[:rating] %></p>
-                <p><%= film[:plot] %></p>
+                <p class="rating"><%= film[:rating] %></p>
+                <p class="plot"><%= film[:plot] %></p>
               </div>
             </div>
           </div>
